<resources>
    <string name="app_name">Chubby</string>
    <string name="welcome_to_chubby">Welcome to Chubby</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="credits">credits</string>
    <string name="app_logo_description">app logo</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="point_food">10 point</string>
    <string name="point_sweets">20 point</string>
    <string name="point_vegetables">5 point</string>
    <string name="point_skull">Game Over</string>
    <string name="btn_start">START</string>

    <string name="score">Score : %d</string>
    <string name="tap_to_start">Tap to Start</string>

    <string name="result_title">GAME OVER</string>
    <string name="result_score">Your Score: %d</string>
    <string name="high_score">High Score : %d</string>
    <string name="btn_try_again">TRY AGAIN</string>
    <string name="points_table">Points Table</string>
    <string name="btn_return">Return</string>
    <string name="note">This android app is for my own educational purposes only, \nThe images within are used according to the license agreement of each one of them</string>
    <string name="only_credit">
        "The mouth image is \""Boy Png\"" vector image by Lovepik.com \n https://lovepik.com/images/png-boy.html
        \nThe logo image downloaded from https://www.pngfind.com/mpng/TJbxwJ_fat-cartoon-png-fat-man-clipart-transparent-png/ under Personal Use Only License"

    </string>
</resources>