<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_score"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_marginTop="50dp"
        android:onClick="tryAgain"
        app:cardBackgroundColor="@color/btn_background">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/btn_try_again"
                android:textColor="#fff"
                android:textSize="35sp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_marginTop="50dp"
        android:onClick="exit"
        app:cardBackgroundColor="@color/btn_background">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/exit"
                android:textColor="#fff"
                android:textSize="35sp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>