<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_table"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TableRow
            android:gravity="center_vertical">
            <androidx.emoji.widget.EmojiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍏, 🥦, 🥬, 🥕, 🍆"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_vegetables"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >
            <androidx.emoji.widget.EmojiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🌭, 🍕, 🍗, 🍔, 🥩"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_food"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <androidx.emoji.widget.EmojiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍦, 🍩, 🍰, 🍭, 🥞"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_sweets"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <androidx.emoji.widget.EmojiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="☠️"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_skull"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

    </TableLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_marginTop="60dp"
        android:onClick="startGame"
        app:cardBackgroundColor="@color/btn_background">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/btn_start"
                android:textColor="#fff"
                android:textSize="35sp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>