<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_chubby"
        android:textColor="@color/white"
        android:textSize="50sp"
        />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_headline"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/fatboy_clear" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/btn_background"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/play"
                android:textColor="#fff"
                android:textSize="35sp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/btn_background"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/exit"
                android:textColor="#fff"
                android:textSize="35sp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_exit"
        android:text="@string/credits"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>