<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreditsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        >

        <TextView
            android:id="@+id/txt_credits_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Credits:"
            android:textSize="45sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/txt_credits_Note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_credits_box"
            app:layout_constraintTop_toBottomOf="@+id/txt_credits_title" />

        <TextView
            android:id="@+id/txt_credits_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/only_credit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_credits_Note" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:onClick="returnToMain"
            app:cardBackgroundColor="@color/btn_background"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_return"
                    android:textColor="#fff"
                    android:textSize="35sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>